# latex-toolbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.fr.md  README.md  SECURITY.md  TEMPLATE_COMPATIBILITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
assets/logos/: README.md
docs/demo/: build.tape  create.tape  record.sh
latex_forge/: __init__.py  build.py  cli.py  config.py  diagnose.py  export.py  installed_templates.py  profile.py  project.py  setup.py  template_manager.py
latex_forge/assets/images/common/: README.md
latex_forge/templates/blank/: latexforge.toml  main.tex
latex_forge/templates/blank/frontmatter/: metadata.tex
latex_forge/templates/blank/sections/: content.tex
latex_forge/templates/cv-en/: main.tex
latex_forge/templates/cv-en/sections/: heading.tex  involvement.tex  skills.tex
latex_forge/templates/cv-fr/sections/: engagement.tex  projets.tex
latex_forge/templates/project-report-en/backmatter/: appendices.tex
latex_forge/templates/project-report-en/frontmatter/: metadata.tex  toc.tex
latex_forge/templates/project-report-en/sections/: testing.tex
latex_forge/templates/project-report-fr/: main.tex
latex_forge/templates/project-report-fr/backmatter/: annexes.tex
latex_forge/templates/project-report-fr/frontmatter/: abstract.tex
latex_forge/templates/project-report-fr/sections/: etat-de-lart.tex  tests.tex
latex_forge/templates/rapport-projet-en/backmatter/: acknowledgements.tex  ai-statement.tex
latex_forge/templates/rapport-projet-en/frontmatter/: abstract.tex
latex_forge/templates/rapport-projet-en/sections/: related-work.tex
latex_forge/templates/rapport-projet-fr/frontmatter/: metadata.tex
latex_forge/templates/rapport-projet-fr/sections/: architecture.tex  conclusion.tex  implementation.tex  introduction.tex  resultats.tex
latex_forge/templates/research/: main.tex
latex_forge/templates/research/appendix/: annexes.tex
latex_forge/templates/research/backmatter/: acknowledgements.tex
latex_forge/templates/research/frontmatter/: metadata.tex
latex_forge/templates/research/sections/: related-work.tex
latex_toolbox/: cli.py  config.py  project.py  setup.py  template_manager.py
latex_toolbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
latex_toolbox/templates/cv-en/sections/: education.tex  experience.tex  projects.tex
latex_toolbox/templates/cv-fr/: main.tex
latex_toolbox/templates/rapport-projet-en/: README.md  main.tex
latex_toolbox/templates/rapport-projet-fr/: README.md  main.tex
latex_toolbox/templates/rapport-ter/: README.md  main.tex
latex_toolbox/templates/research/: README.md  main.tex
projects/: README.md
projects/mon-projet/: README.md
projects/mon-projet/frontmatter/: metadata.tex
projects/mon-projet/sections/: conclusion.tex
scripts/: new-project.py  new-project.sh
templates/rapport-projet-en/: main.tex
templates/rapport-projet-fr/: README.md  main.tex
templates/rapport-projet-fr/backmatter/: ai-statement.tex
templates/rapport-projet-fr/frontmatter/: metadata.tex
templates/rapport-projet-fr/sections/: introduction.tex
templates/rapport-ter/: README.md  main.tex
templates/rapport-ter/appendices/: annexes.tex
templates/rapport-ter/backmatter/: ai-statement.tex
templates/rapport-ter/bibliography/: references.bib
templates/rapport-ter/frontmatter/: metadata.tex  toc.tex
templates/rapport-ter/sections/: conclusion.tex  contribution.tex  etat-de-l-art.tex  introduction.tex
templates/research/: README.md  main.tex
templates/research/backmatter/: bibliography.tex
templates/research/frontmatter/: metadata.tex
templates/research/sections/: conclusion.tex  introduction.tex
tests/: test_build.py  test_cli.py  test_config.py  test_cv_profile.py  test_diagnose.py  test_export.py  test_gallery_archive_install.py  test_installed_templates.py  test_profile.py  test_project.py  test_template_manager.py  test_template_update.py
(+35 files in other folders)
