[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "latex-toolbox"
version = "0.2.0"
description = "CLI for creating standalone LaTeX projects from this toolbox."
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argcomplete>=3.0",
    "tomli>=1.1.0; python_version < '3.11'",
]
authors = [
    { name = "Thomas Gourmelen", email = "thomas.gourmelen@icloud.com" }
]
keywords = ["latex", "templates", "cli", "academic", "report", "research", "university"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/thmsgo18/latex-toolbox"
Repository = "https://github.com/thmsgo18/latex-toolbox"
"Bug Tracker" = "https://github.com/thmsgo18/latex-toolbox/issues"

[project.scripts]
latex-toolbox = "latex_toolbox.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["latex_toolbox*"]

[tool.setuptools.package-data]
latex_toolbox = [
    "templates/**/*",
    "templates/**/.gitkeep",
    "styles/**/*",
    "assets/**/*",
    ".vscode/extensions.json",
]
